--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background: #FFCB05;
+    background: red;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +13,7 @@ h1 {
     font-size: 50px;
     background: #3D7DCA;
     border: 5px solid black;
-    color: #FFCB05;
+    color: white;
     padding: 10px;
     letter-spacing: 5px;
     border-radius: 25px;
@@ -48,6 +48,6 @@ h1 {
 }
 
 .name {
-    color: #003A70;
+    color: white;
     margin-bottom: 0;
 }
